--- a/public/assets/neutro/css/style.css
+++ b/public/assets/neutro/css/style.css
@@ -3,3 +3,9 @@
     justify-content: space-between;
     align-items: center;
 }
+
+
+.column span{
+    font-weight: bold !important;
+    color: #b66dff;
+}
